--- a/packages/dnb-eufemia/src/components/button/style/dnb-button.scss
+++ b/packages/dnb-eufemia/src/components/button/style/dnb-button.scss
@@ -221,7 +221,6 @@
     .dnb-button__icon {
       order: 1;
     }
-    & > *,
     .dnb-button__text {
       order: 2;
     }
